--- a/src/index.css
+++ b/src/index.css
@@ -98,3 +98,48 @@
 .product-description p:last-child {
   margin-bottom: 0;
 }
+
+/* dark loader */
+
+.lds-ring-dark {
+  /* display: inline-block; */
+  position: relative;
+  width: 40px;
+  height: 40px;
+  display: grid;
+  place-items: center;
+}
+
+.lds-ring-dark div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  margin: 8px;
+  border: 3px solid #1c2331;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #1c2331 transparent transparent transparent;
+}
+
+.lds-ring-dark div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+
+.lds-ring-dark div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+
+.lds-ring-dark div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
